--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -21,9 +21,9 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
+          organization: jsaffe
+          projectKey: sonarcloud
           projectBaseDir: frontend/
-          sonar.organization: jsaffe
-          sonar.projectKey: sonarcloud
           
   static_scan_backend:
     name: SonarCloudScan
@@ -37,9 +37,9 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
+          organization: jsaffe
+          projectKey: sonarcloud
           projectBaseDir: backend/
-          sonar.organization: jsaffe
-          sonar.projectKey: sonarcloud
 
   build:
     runs-on: ubuntu-latest
